--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div class="container" onclick="openEnvelope()">
+    <div class="container">
         <div class="envelope">
             <div class="flap"></div>
             <div class="letter">
