--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Valentine's Day ❤️</title>
+    <title>해피 발렌타인 데이 다혜 ❤️</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
