--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <p class="click-text">Click to open 💌</p>
     </div>
 
+    <!-- Removed full-screen modal for the letter image -->
+
     <script src="script.js"></script>
 </body>
 </html>
