--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p class="valentines-text">Happy Valentine's Day</p> <!-- Moved text -->
 
     <div class="password-container">
-        <p class="secrets-locked-text">Secrets Locked. Enter Password</p> <!-- Added text -->
+        <p class="secrets-locked-text">Secrets Locked! Enter Password</p> <!-- Added text -->
         <div class="password-inputs">
             <input type="text" maxlength="1" class="password-square">
             <input type="text" maxlength="1" class="password-square">
